trunk/Archive2/03/59ad8e6a0bca4a/output
main.cpp:1:1: error: 'Here' does not name a type
 Here is some text for you. Use it
 ^
